unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/ERS_Payment_Accident_Assist__mdt.object-meta.xml
<CustomObject>
    <label>ERS Payment Accident Assist</label>
    <pluralLabel>ERS Payments Accident Assists</pluralLabel>
</CustomObject>