unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>196019</fullName>
                <default>true</default>
                <label>196019</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>