unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15000</fullName>
                <default>true</default>
                <label>15000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>