unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Comm_Center__c.field-meta.xml
<CustomField>
    <fullName>Comm_Center__c</fullName>
    <label>Comm Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IL</fullName>
                <default>true</default>
                <label>IL</label>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>WI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>