unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>420999</fullName>
                <default>true</default>
                <label>420999</label>
            </value>
            <value>
                <fullName>7112</fullName>
            </value>
            <value>
                <fullName>140000</fullName>
            </value>
            <value>
                <fullName>200011</fullName>
            </value>
            <value>
                <fullName>9230</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>