unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCIDENT ASSIST</fullName>
                <default>true</default>
                <label>ACCIDENT ASSIST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>