unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Fleet_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleet Boolean</label>
    <type>Checkbox</type>
</CustomField>