unpackaged/main/default/objects/ERS_Payment_Accident_Assist__mdt/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1405</fullName>
                <default>true</default>
                <label>1405</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>